# imgbytesizer

./: .style.yapf  .vulture_ignore.py  CHANGELOG.md  Makefile  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
.github/workflows/: ci.yml  publish.yml  test.yml
imgbytesizer/: __init__.py  formatter.py  logger.py  main.py  resizer.py  utils.py
scripts/: check_version.py  sort_requirements.py
src/imgbytesizer/: __init__.py  logger.py  main.py  resizer.py
tests/: test_formatter.py  test_logger.py  test_main.py  test_resizer.py  test_utils.py
