[project]
authors = [{ name = "pyyupsk", email = "contact@fasu.dev" }]
description = "A CLI tool to resize images to a target file size."
dependencies = ["Pillow>=11.0.0", "tabulate>=0.9.0"]
keywords = ["image", "resize", "compression", "cli", "optimize"]
license = { text = "MIT License" }
name = "imgbytesizer"
readme = "README.md"
requires-python = ">=3.9"
version = "0.2.1"

[project.scripts]
imgbytesizer = "imgbytesizer.main:main"

[tool.setuptools]
packages = ["imgbytesizer"]
