[project]
name = "imgbytesizer"
version = "0.2.4"
description = "A CLI tool to resize images to a target file size."
keywords = ["image", "resize", "compression", "cli", "optimize"]

authors = [{ name = "pyyupsk", email = "contact@fasu.dev" }]

readme = "README.md"
license = { text = "MIT License" }

requires-python = ">=3.9"

dependencies = [
  "pillow (>=11.2.1,<12.0.0)",
  "pyfiglet (>=1.0.2,<2.0.0)",
  "tabulate (>=0.9.0,<0.10.0)",
]

[project.scripts]
imgbytesizer = "imgbytesizer.main:main"

[tool.poetry]
packages = [{ include = "imgbytesizer", from = "src" }]

[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
requests = "^2.32.3"
types-requests = "^2.32.0.20250515"
tomli = "^2.2.1"
types-tabulate = "^0.9.0.20241207"
vulture = "^2.14"
yapf = "^0.43.0"
tox = "^4.26.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
